Add stating code base for the part 2

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -174,4 +174,9 @@ main>section#index-view>div.item>a:hover {
 }
 /*----------------------END INDEX-------------------------*/
 
+/*----------------------BEGIN FORM------------------------*/
+
+/* IMPLEMENTER LE CODE FORMULAIRE ICI */
+
+/*-----------------------END FORM-------------------------*/
         
