--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,11 @@
 html {
     box-sizing: border-box;
+    /*
+    --mq-lg: 1200px;
+    --mq-md: 800px;
+    --mq-sm: 480px;
+    --mq-xs: 320px;
+    */
 }
 *, *:before, *:after {
     box-sizing: inherit;
@@ -7,6 +13,12 @@ html {
 
 :root {
     --real-vw: calc(100vw - (100vw - 100%));
+    /*
+    --mq-lg: 1200px;
+    --mq-md: 800px;
+    --mq-sm: 480px;
+    --mq-xs: 320px;
+    */
 }
 
 body {
@@ -28,10 +40,25 @@ header {
     padding: 0 10px;
 }
 
-header img {
+header svg, header img {
     height: 50px;
     margin: 15px 0;
     float: left;
+}
+header img {
+    background-color: aqua;
+    color:blueviolet;
+    fill: orange;
+}
+/* header svg>g>path {
+    background-color: aqua;
+    color:blueviolet;
+    fill: orange;
+} */
+header svg path {
+    background-color: aqua;
+    color:blueviolet;
+    fill: orange;
 }
 
 header h1 {
@@ -176,7 +203,102 @@ main>section#index-view>div.item>a:hover {
 
 /*----------------------BEGIN FORM------------------------*/
 
-/* IMPLEMENTER LE CODE FORMULAIRE ICI */
+main>section#form-view form {
+    width: fit-content;
+    border: 1px solid white;
+    border-radius: 8px;
+    box-shadow: 0 0 8px 8px rgba(255,255,255,0.5);
+    margin: 20px auto 0 auto;
+    background-color: rgba(255, 255, 255, 0.6);
+    padding: 10px;
+    /* display: block; */
+    /* display: flex;
+    flex-wrap: wrap;
+    justify-content: center; */
+}
+
+main>section#form-view form>fieldset {
+    padding: 10px;
+    margin: 20px 0;
+    width: 100%;
+}
+
+main>section#form-view form>fieldset table,
+main>section#form-view form>fieldset table tr {
+    /* padding: 10px;
+    margin: 20px 0; */
+    width: 100%;
+}
+
+main>section#form-view form>fieldset table td:first-of-type {
+    /* padding: 10px;
+    margin: 20px 0; */
+    width: 50%;
+    text-align: right;
+    vertical-align: middle;
+    padding: 0 30px 0 0
+}
+
+main>section#form-view form>fieldset table td:last-of-type {
+    /* padding: 10px;
+    margin: 20px 0; */
+    width: 50%;
+}
+
+main>section#form-view form>fieldset>legend {
+    font-weight: bold;
+}
+
+main>section#form-view form label {
+    cursor: pointer;
+}
+
+main>section#form-view form input {
+    padding: 10px;
+    margin: 20px 0;
+    border-radius: 5px;
+    width: 100%;
+}
+
+main>section#form-view form input[type="submit"] {
+    width: calc(50% - 20px);
+    /* margin: 20px calc((80vw - 200px) / 2); */
+    font-size: 16px;
+    background-color: rgba(255, 162, 0, 0.43);
+    cursor: pointer;
+}
+main>section#form-view form input[type="submit"]:hover {
+    background-color: rgba(255, 162, 0, 0.63);
+}
+
+main>section#form-view form div {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+main>section#form-view {
+    width: 80vw;
+    margin: 0 auto;
+}
+
+main>section#form-view a:first-of-type,
+main>section#form-view a:first-of-type:visited {
+    display: block;
+    width: calc(50% - 20px);
+    text-decoration: none;
+    text-align: center;
+    font-size: 16px;
+    color:midnightblue;
+    border: 1px solid midnightblue;
+    border-radius: 5px;
+    padding: 10px;
+    /* margin: 5px; */
+    background-color: rgba(255, 255, 255, 0.4);
+}
+
+main>section#form-view a:first-of-type:active,
+main>section#form-view a:first-of-type:hover {
+    background-color: rgba(0, 238, 255, 0.4);
+}
 
 /*-----------------------END FORM-------------------------*/
-        
