--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,11 +1,5 @@
 html {
     box-sizing: border-box;
-    /*
-    --mq-lg: 1200px;
-    --mq-md: 800px;
-    --mq-sm: 480px;
-    --mq-xs: 320px;
-    */
 }
 *, *:before, *:after {
     box-sizing: inherit;
@@ -13,21 +7,9 @@ html {
 
 :root {
     --real-vw: calc(100vw - (100vw - 100%));
-    /*
-    --mq-lg: 1200px;
-    --mq-md: 800px;
-    --mq-sm: 480px;
-    --mq-xs: 320px;
-    */
 }
 
 body {
-    /*
-    --mq-lg: 1200px;
-    --mq-md: 800px;
-    --mq-sm: 480px;
-    --mq-xs: 320px;
-    */
 }
 
 header {
@@ -40,22 +22,12 @@ header {
     padding: 0 10px;
 }
 
-header svg, header img {
+header svg {
     height: 50px;
     margin: 15px 0;
     float: left;
 }
-header img {
-    background-color: aqua;
-    color:blueviolet;
-    fill: orange;
-}
-/* header svg>g>path {
-    background-color: aqua;
-    color:blueviolet;
-    fill: orange;
-} */
-header svg path {
+header svg>g>path {
     background-color: aqua;
     color:blueviolet;
     fill: orange;
@@ -94,7 +66,6 @@ main>section#index-view>div.item {
     border: 1px solid black;
     border-radius: 8px;
     background-color: rgba(255,255,255,0.4);
-    /* grid-column-gap: 10px; */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 
 }
@@ -149,7 +120,6 @@ main>section#index-view>div.item>a:hover {
 #img14 {
     width: 85px;
     height: 85px;
-    /* margin: 0 0 0 10px; */
 }
 
 #img1 { background: url('../img/chat1.png') center / 90% no-repeat; }
@@ -211,10 +181,6 @@ main>section#form-view form {
     margin: 20px auto 0 auto;
     background-color: rgba(255, 255, 255, 0.6);
     padding: 10px;
-    /* display: block; */
-    /* display: flex;
-    flex-wrap: wrap;
-    justify-content: center; */
 }
 
 main>section#form-view form>fieldset {
@@ -225,14 +191,10 @@ main>section#form-view form>fieldset {
 
 main>section#form-view form>fieldset table,
 main>section#form-view form>fieldset table tr {
-    /* padding: 10px;
-    margin: 20px 0; */
     width: 100%;
 }
 
 main>section#form-view form>fieldset table td:first-of-type {
-    /* padding: 10px;
-    margin: 20px 0; */
     width: 50%;
     text-align: right;
     vertical-align: middle;
@@ -240,8 +202,6 @@ main>section#form-view form>fieldset table td:first-of-type {
 }
 
 main>section#form-view form>fieldset table td:last-of-type {
-    /* padding: 10px;
-    margin: 20px 0; */
     width: 50%;
 }
 
@@ -262,7 +222,6 @@ main>section#form-view form input {
 
 main>section#form-view form input[type="submit"] {
     width: calc(50% - 20px);
-    /* margin: 20px calc((80vw - 200px) / 2); */
     font-size: 16px;
     background-color: rgba(255, 162, 0, 0.43);
     cursor: pointer;
@@ -292,7 +251,6 @@ main>section#form-view a:first-of-type:visited {
     border: 1px solid midnightblue;
     border-radius: 5px;
     padding: 10px;
-    /* margin: 5px; */
     background-color: rgba(255, 255, 255, 0.4);
 }
 
