[part3] Update to add sass and prepare the project for the SCSS implementation

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,56 +1,9 @@
-html {
-    box-sizing: border-box;
-}
-*, *:before, *:after {
-    box-sizing: inherit;
-}
+/**
+* @TODO: Il suffit juste de Convertir ce CSS en SCSS pour cette 3eme partie du TP
+*/
 
 :root {
     --real-vw: calc(100vw - (100vw - 100%));
-}
-
-body {
-}
-
-header {
-    font-size: 1.3em;
-    background-color: midnightblue;
-    width: var(--real-vw);
-    height: 80px;
-    position: sticky;
-    top: 0;
-    padding: 0 10px;
-}
-
-header svg {
-    height: 50px;
-    margin: 15px 0;
-    float: left;
-}
-
-header svg>g>path {
-    background-color: aqua;
-    color:blueviolet;
-    fill: orange;
-}
-
-header h1 {
-    color: orange;
-    line-height: 80px;
-    margin: 0;
-    float: right;
-}
-
-main {
-    background: url('../img/background.png') no-repeat center fixed;
-    background-size: cover;
-    background-position-y: 80px;
-    min-height: calc(100vh - 80px);
-}
-main>h1 {
-    margin-top: 0;
-    padding-top: 15px;
-    text-align: center;
 }
 
 /*---------------------BEGIN INDEX------------------------*/
@@ -171,94 +124,3 @@ main>section#index-view>div.item>a:hover {
     }
 }
 /*----------------------END INDEX-------------------------*/
-
-/*----------------------BEGIN FORM------------------------*/
-
-main>section#form-view form {
-    width: fit-content;
-    border: 1px solid white;
-    border-radius: 8px;
-    box-shadow: 0 0 8px 8px rgba(255,255,255,0.5);
-    margin: 20px auto 0 auto;
-    background-color: rgba(255, 255, 255, 0.6);
-    padding: 10px;
-}
-
-main>section#form-view form>fieldset {
-    padding: 10px;
-    margin: 20px 0;
-    width: 100%;
-}
-
-main>section#form-view form>fieldset table,
-main>section#form-view form>fieldset table tr {
-    width: 100%;
-}
-
-main>section#form-view form>fieldset table td:first-of-type {
-    width: 50%;
-    text-align: right;
-    vertical-align: middle;
-    padding: 0 30px 0 0
-}
-
-main>section#form-view form>fieldset table td:last-of-type {
-    width: 50%;
-}
-
-main>section#form-view form>fieldset>legend {
-    font-weight: bold;
-}
-
-main>section#form-view form label {
-    cursor: pointer;
-}
-
-main>section#form-view form input {
-    padding: 10px;
-    margin: 20px 0;
-    border-radius: 5px;
-    width: 100%;
-}
-
-main>section#form-view form input[type="submit"] {
-    width: calc(50% - 20px);
-    font-size: 16px;
-    background-color: rgba(255, 162, 0, 0.43);
-    cursor: pointer;
-}
-main>section#form-view form input[type="submit"]:hover {
-    background-color: rgba(255, 162, 0, 0.63);
-}
-
-main>section#form-view form div {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-main>section#form-view {
-    width: 80vw;
-    margin: 0 auto;
-}
-
-main>section#form-view a:first-of-type,
-main>section#form-view a:first-of-type:visited {
-    display: block;
-    width: calc(50% - 20px);
-    text-decoration: none;
-    text-align: center;
-    font-size: 16px;
-    color:midnightblue;
-    border: 1px solid midnightblue;
-    border-radius: 5px;
-    padding: 10px;
-    /* margin: 5px; */
-    background-color: rgba(255, 255, 255, 0.4);
-}
-
-main>section#form-view a:first-of-type:active,
-main>section#form-view a:first-of-type:hover {
-    background-color: rgba(0, 238, 255, 0.4);
-}
-
-/*-----------------------END FORM-------------------------*/
