--- a/src/css/main.css
+++ b/src/css/main.css
@@ -50,3 +50,23 @@ main>h1 {
     padding-top: 15px;
     text-align: center;
 }
+
+@media screen and (min-width: 800px) and (max-width: 1200px) {
+    header h1 {
+        font-size: 1.27em;
+    }
+}
+@media screen and (min-width: 481px) and (max-width: 800px) {
+    header h1 {
+        font-size: 0.8em;
+    }
+}
+@media screen and (max-width: 480px) {
+    header h1 {
+        font-size: 1.3em;
+        width: 6.5em;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
