--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,7 +1,38 @@
 /*---------------------BEGIN INDEX------------------------*/
 $real-vw: calc(100vw - (100vw - 100%));
 
+main dialog {
+    width: 50%;
+    min-height: 200px;
+    padding: 20px;
+    background-color: rgba(255,255,255,0.8);
+    text-align: center;
+}
+
 main>section {
+    &#index-js {
+        display: flex;
+        margin-bottom: 30px;
+        justify-content: space-around;
+
+        >div {
+                width: 40%;
+                min-height: 50px;
+                flex-direction: row;
+                flex-wrap: wrap;
+                border: 1px dashed firebrick;
+                padding: 10px;
+        }
+
+        button {
+            font-size: 1em;
+            display:block;
+            height: 30px;
+            margin: 0 auto;
+            cursor: grab;
+        }
+    }
+
     &#index-view {
         display: flex;
         flex-wrap: wrap;
