--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,29 +1,68 @@
-blockquote {
-    margin: 0;
+html {
+    box-sizing: border-box;
+}
+*, *:before, *:after {
+    box-sizing: inherit;
+}
 
-    p {
-        max-width: 80%;
-        margin:0 auto;
-        text-align: center;
-        padding: 15px;
-        background: #eee;
-        border-radius: 5px;
+:root {
+    --real-vw: calc(100vw - (100vw - 100%));
+}
+
+body {
+}
+
+header {
+    font-size: 1.3em;
+    background-color: midnightblue;
+    width: var(--real-vw);
+    height: 80px;
+    position: sticky;
+    top: 0;
+    padding: 0 10px;
+
+    svg {
+        height: 50px;
+        margin: 15px 0;
+        float: left;
+        
+        &>g>path {
+            color:blueviolet;
+            fill: orange;            
+        }
     }
 
-    p::before {
-        content: '\201C';
+    h1 {
+        color: orange;
+        line-height: 80px;
+        margin: 0;
+        float: right;
+        
+        @media screen and (min-width: 800px) and (max-width: 1200px) {
+            font-size: 1.27em;
+        }
+        @media screen and (min-width: 481px) and (max-width: 800px) {
+            font-size: 0.8em;
+        }
+        @media screen and (max-width: 480px) {
+            font-size: 1.3em;
+            width: 6.5em;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }          
     }
 }
 
-.right {
-    text-align: right;
-    margin-right: 10%;
-}
+main {
+    background: url('../../img/background.png') no-repeat center fixed;
+    background-size: cover;
+    background-position-y: 80px;
+    min-height: calc(100vh - 80px);
 
-.center {
-    text-align: center;
-}
-
-.red {
-    color:red;
+    h1 {
+        margin-top: 0;
+        padding-top: 15px;
+        text-align: center;        
+    }
 }
